[tool.poetry]
name = "cx16_conv"
version = "0.1.0"
description = ""
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]

[tool.poetry.scripts]
"cx16-conv" = 'cx16_conv.cli:common'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
pylama = "^7.7.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
